// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Publish script (helper) should handle error message if the publishing failed with 404 1`] = `"404 (TEST) Not Found: Application slug not found"`;

exports[`Publish script (helper) should handle error message if the publishing failed with an unexpected fetch error 1`] = `"(TEST) Unexpected error"`;

exports[`Publish script (helper) should work correctly if expected options provided 1`] = `
Object {
  "fetchURL": "https://mock.registry.cc/mock_space/registry/mock-app",
  "options": Object {
    "body": "{\\"editor\\":\\"cozy\\",\\"version\\":\\"2.1.8-dev.12345\\",\\"url\\":\\"https://mock.getarchive.cc/12345.tar.gz\\",\\"sha256\\":\\"e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855\\",\\"type\\":\\"webapp\\"}",
    "headers": Object {
      "Authorization": "Token registryTokenForTest123",
      "Content-Type": "application/json",
    },
    "method": "POST",
  },
}
`;

exports[`Publish script (helper) should work correctly if no space name provided 1`] = `
Object {
  "fetchURL": "https://mock.registry.cc/registry/mock-app",
  "options": Object {
    "body": "{\\"editor\\":\\"cozy\\",\\"version\\":\\"2.1.8-dev.12345\\",\\"url\\":\\"https://mock.getarchive.cc/12345.tar.gz\\",\\"sha256\\":\\"e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855\\",\\"type\\":\\"webapp\\"}",
    "headers": Object {
      "Authorization": "Token registryTokenForTest123",
      "Content-Type": "application/json",
    },
    "method": "POST",
  },
}
`;
